--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -41,5 +41,5 @@ h3 {
 
 p, ul, li {
     font-size: 1.25rem;
-    line-height: 2rem;
+    line-height: 1.75rem;
 }
